// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Votes > should render correctly > with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-add"
      id="vote-button-add-test-notes-id-1"
    >
      <svg
        class="vote-button-add__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16L8 16"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          d="M16 8L16 24"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
    </button>
    <div
      class="tooltip-container"
    />
  </div>
</div>
`;

exports[`Votes > should render correctly > with no votes and disabled voting 1`] = `<div />`;

exports[`Votes > should render correctly > with votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
      id="vote-button-remove-test-notes-id-1"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16H8"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <div
      class="tooltip-container"
    />
    <button
      class="dot-button vote-button-add"
      disabled=""
      id="vote-button-add-test-notes-id-1"
    >
      <svg
        class="vote-button-add__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16L8 16"
          stroke="currentColor"
          stroke-width="1.75"
        />
        <path
          d="M16 8L16 24"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
    </button>
    <div
      class="tooltip-container"
    />
  </div>
</div>
`;

exports[`Votes > should render correctly > with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
      disabled=""
      id="vote-button-remove-test-notes-id-1"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M24 16H8"
          stroke="currentColor"
          stroke-width="1.75"
        />
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <div
      class="tooltip-container"
    />
  </div>
</div>
`;
